VIM: Quicktask Plugin, alias for todo

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/bundle/xmledit"]
 	path = vim/bundle/xmledit
 	url = https://github.com/sukima/xmledit.git
+[submodule "vim/bundle/vim-quicktask"]
+	path = vim/bundle/vim-quicktask
+	url = https://github.com/aaronbieber/vim-quicktask.git
